fixed cpp code generation, code printing moved to the end of the file

--- a/analysis.ipynb
+++ b/analysis.ipynb
@@ -50,8 +50,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "generate_output_file_for_python = True\n",
-    "generate_output_file_for_cpp = False\n",
+    "generate_output_file_for_python = False\n",
+    "generate_output_file_for_cpp = True\n",
     "generate_output_file_for_julia = False\n",
     "\n",
     "Path(os.path.join('.', 'src')).mkdir(exist_ok=True)\n",
@@ -349,50 +349,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 15,
-   "id": "6edcc76e-c843-4d2b-9413-a137eac81412",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Printing the function: forward_kinematics\n"
-     ]
-    }
-   ],
-   "source": [
-    "if generate_output_file_for_python:\n",
-    "    forward_kinematics_printer = PythonFunction('forward_kinematics', src_folder_path_python, ['q'], ['x', 'R'], [x, R])\n",
-    "    forward_kinematics_printer.print()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 16,
-   "id": "9e501c03-3268-48a2-b018-2437044b282c",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "if generate_output_file_for_cpp:\n",
-    "    forward_kinematics_printer_cpp = CppFunction('forwardKinematics', src_folder_path_cpp, {'q':'Eigen::Vector<double, 7>'}, {'T': 'Eigen::Transform<double, 3, Eigen::Affine>'}, {'x': 'Eigen::Vector<double, 3>', 'R': 'Eigen::Matrix<double, 3, 3>'}, [x, R])\n",
-    "    forward_kinematics_printer_cpp.print()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 17,
-   "id": "e6210302",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "if generate_output_file_for_julia:\n",
-    "    forward_kinematics_printer_julia = JuliaFunction('forward_kinematics', src_folder_path_julia, {'q':'SVector{7, Float64}'}, {'x': 'SVector{3, Float64}', 'R': 'SMatrix{3, 3, Float64}'}, [x, R])\n",
-    "    forward_kinematics_printer_julia.print()"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "id": "17214e5a-c003-4f49-ba06-aeb589075168",
    "metadata": {},
@@ -410,7 +366,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 15,
    "id": "3e49a76a-62d8-46f8-9c18-c720a42848ac",
    "metadata": {},
    "outputs": [],
@@ -450,7 +406,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 16,
    "id": "c0dba4ad-cab7-4c87-b6aa-94f0b994e9a4",
    "metadata": {},
    "outputs": [],
@@ -468,7 +424,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 17,
    "id": "a5999193",
    "metadata": {},
    "outputs": [],
@@ -515,138 +471,9 @@
     "           )\n",
     "\n",
     "J = Jt.col_join(Jr)\n",
-    "J_dot = J.diff()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 21,
-   "id": "3f3a2e54-a9de-4d90-ac98-4b18ddb12a67",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Jt = Matrix([P9.pos_from(P0).dot(N.x),\n",
-    "#              P9.pos_from(P0).dot(N.y),\n",
-    "#              P9.pos_from(P0).dot(N.z)])\\\n",
-    "#         .jacobian(Matrix([q1, q2, q3, q4, q5, q6, q7])).subs(dummy_dict) if gripper \\\n",
-    "#         else Matrix([P8.pos_from(P0).dot(N.x),\n",
-    "#                      P8.pos_from(P0).dot(N.y),\n",
-    "#                      P8.pos_from(P0).dot(N.z)])\\\n",
-    "#         .jacobian(Matrix([q1, q2, q3, q4, q5, q6, q7])).subs(dummy_dict)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "82ba0dcd-1f9b-4e84-a11d-24b6ea8094a2",
-   "metadata": {},
-   "source": [
-    "Calculate the rotational part of the Jacobian"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 22,
-   "id": "7ad71e14-32ff-41a9-a953-7d59a9cb1044",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Jr = Matrix(\n",
-    "#             [\n",
-    "#                 [\n",
-    "#                     H.ang_vel_in(N).to_matrix(N)[0].coeff(q1p).subs(dummy_dict).trigsimp(),\n",
-    "#                     H.ang_vel_in(N).to_matrix(N)[0].coeff(q2p).subs(dummy_dict).trigsimp(),\n",
-    "#                     H.ang_vel_in(N).to_matrix(N)[0].coeff(q3p).subs(dummy_dict).trigsimp(),\n",
-    "#                     H.ang_vel_in(N).to_matrix(N)[0].coeff(q4p).subs(dummy_dict).trigsimp(),\n",
-    "#                     H.ang_vel_in(N).to_matrix(N)[0].coeff(q5p).subs(dummy_dict).trigsimp(),\n",
-    "#                     H.ang_vel_in(N).to_matrix(N)[0].coeff(q6p).subs(dummy_dict).trigsimp(),\n",
-    "#                     H.ang_vel_in(N).to_matrix(N)[0].coeff(q7p).subs(dummy_dict).trigsimp(),\n",
-    "#                 ],\n",
-    "#                 [\n",
-    "#                     H.ang_vel_in(N).to_matrix(N)[1].coeff(q1p).subs(dummy_dict).trigsimp(),\n",
-    "#                     H.ang_vel_in(N).to_matrix(N)[1].coeff(q2p).subs(dummy_dict).trigsimp(),\n",
-    "#                     H.ang_vel_in(N).to_matrix(N)[1].coeff(q3p).subs(dummy_dict).trigsimp(),\n",
-    "#                     H.ang_vel_in(N).to_matrix(N)[1].coeff(q4p).subs(dummy_dict).trigsimp(),\n",
-    "#                     H.ang_vel_in(N).to_matrix(N)[1].coeff(q5p).subs(dummy_dict).trigsimp(),\n",
-    "#                     H.ang_vel_in(N).to_matrix(N)[1].coeff(q6p).subs(dummy_dict).trigsimp(),\n",
-    "#                     H.ang_vel_in(N).to_matrix(N)[1].coeff(q7p).subs(dummy_dict).trigsimp(),\n",
-    "#                 ],\n",
-    "#                 [\n",
-    "#                     H.ang_vel_in(N).to_matrix(N)[2].coeff(q1p).subs(dummy_dict).trigsimp(),\n",
-    "#                     H.ang_vel_in(N).to_matrix(N)[2].coeff(q2p).subs(dummy_dict).trigsimp(),\n",
-    "#                     H.ang_vel_in(N).to_matrix(N)[2].coeff(q3p).subs(dummy_dict).trigsimp(),\n",
-    "#                     H.ang_vel_in(N).to_matrix(N)[2].coeff(q4p).subs(dummy_dict).trigsimp(),\n",
-    "#                     H.ang_vel_in(N).to_matrix(N)[2].coeff(q5p).subs(dummy_dict).trigsimp(),\n",
-    "#                     H.ang_vel_in(N).to_matrix(N)[2].coeff(q6p).subs(dummy_dict).trigsimp(),\n",
-    "#                     H.ang_vel_in(N).to_matrix(N)[2].coeff(q7p).subs(dummy_dict).trigsimp(),\n",
-    "#                 ],\n",
-    "#             ]\n",
-    "#            )"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "20ca3d32-b591-4699-b26c-f9ce71098121",
-   "metadata": {},
-   "source": [
-    "The complete Jacobian of the robot"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 23,
-   "id": "cbe85c26-de39-4cdb-8e94-4b2f54bfceee",
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "J_dot = J.diff()\n",
     "J_subs = J.subs(dummy_dict)\n",
-    "J_subs_dot = J_dot.subs(dummy_dict)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 24,
-   "id": "e0521eaf-8938-4bf8-bc9f-e69009e4c7ed",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Printing the function: jacobian\n",
-      "Printing the function: jacobian_dot\n"
-     ]
-    }
-   ],
-   "source": [
-    "if generate_output_file_for_python:\n",
-    "    jacobian_printer = PythonFunction('jacobian', src_folder_path_python, ['q'], ['J'], J_subs)\n",
-    "    jacobian_dot_printer = PythonFunction('jacobian_dot', src_folder_path_python, ['q', 'qp'], ['Jdot'], J_subs_dot)\n",
-    "    jacobian_printer.print()\n",
-    "    jacobian_dot_printer.print()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "b9a1932a-0a89-4fd2-a23a-e9115755d007",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "if generate_output_file_for_cpp:\n",
-    "    jacobian_printer_cpp = CppFunction('jacobian', src_folder_path_cpp, {'q':'Eigen::Vector<double, 7>'}, {'J': 'Eigen::Matrix<double, 7, 7>'}, J)\n",
-    "    jacobian_printer_cpp.print()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "bc8def17",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "if generate_output_file_for_julia:\n",
-    "    jacobian_printer_julia = JuliaFunction('jacobian', src_folder_path_julia, {'q':'SVector{7, Float64}'}, {'J': 'SMatrix{7, 7, Float64}>'}, J)\n",
-    "    jacobian_printer_julia.print()"
+    "J_dot_subs = J_dot.subs(dummy_dict)"
    ]
   },
   {
@@ -676,7 +503,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "id": "273f2b2a-29ff-49be-aa28-efc84f01d511",
    "metadata": {},
    "outputs": [],
@@ -703,7 +530,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "id": "f50be1d1-ef1b-4798-a5ef-be00d48b2331",
    "metadata": {},
    "outputs": [],
@@ -731,7 +558,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "id": "fdf7661c-23a5-467b-be7e-c250fd153beb",
    "metadata": {},
    "outputs": [],
@@ -760,7 +587,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "id": "9f63c702-cc9e-46f2-8935-c6a33448c281",
    "metadata": {},
    "outputs": [],
@@ -808,7 +635,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "id": "31fe8ba6-e94b-4ed7-bb24-c1aa72d86f18",
    "metadata": {},
    "outputs": [],
@@ -828,36 +655,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "id": "94f2c438-77cd-42bf-894d-8525a522e8be",
    "metadata": {},
    "outputs": [],
    "source": [
     "M = KM.mass_matrix.subs(dummy_dict)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "ef7cb12a-25bc-4bf9-aa01-d036f7d04bc3",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "if generate_output_file_for_python:\n",
-    "    mass_matrix_printer_py = PythonFunction('mass_matrix', src_folder_path_python, ['q'], ['M'], M)\n",
-    "    mass_matrix_printer_py.print()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "2473473b",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "if generate_output_file_for_julia:\n",
-    "    mass_matrix_printer_julia = JuliaFunction('mass_matrix', src_folder_path_julia, {'q':'SVector{7, Float64}'}, {'M':'SMatrix{7, 7, Float64}'}, M)\n",
-    "    mass_matrix_printer_julia.print()"
    ]
   },
   {
@@ -870,7 +673,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "id": "1a39a213-3606-4544-85cd-b2ae4c9da512",
    "metadata": {},
    "outputs": [],
@@ -880,7 +683,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "id": "57e5585d-bad5-482d-bdfa-b1e5f81f88d8",
    "metadata": {},
    "outputs": [],
@@ -900,8 +703,203 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "dd73039e-e827-46d7-a655-c3cd6f0a7a34",
+   "metadata": {},
+   "source": [
+    "## Printing"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f0d929c0-7fd7-47c2-8fed-04e9aa93d9f5",
+   "metadata": {},
+   "source": [
+    "### Kinematics functions"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "3c951c0f-6afe-46e4-a24e-65f587193b14",
+   "metadata": {},
+   "source": [
+    "Print forward kinematics $\\phi(q)$"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
+   "id": "6edcc76e-c843-4d2b-9413-a137eac81412",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "if generate_output_file_for_python:\n",
+    "    forward_kinematics_printer = PythonFunction('forward_kinematics', src_folder_path_python, ['q'], ['x', 'R'], [x, R])\n",
+    "    forward_kinematics_printer.print()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "id": "9e501c03-3268-48a2-b018-2437044b282c",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Printing the function: forwardKinematics\n"
+     ]
+    }
+   ],
+   "source": [
+    "if generate_output_file_for_cpp:\n",
+    "    forward_kinematics_printer_cpp = CppFunction('forwardKinematics', src_folder_path_cpp, {'q':'Eigen::Vector<double, 7>'}, {'T': 'Eigen::Transform<double, 3, Eigen::Affine>'}, {'x': 'Eigen::Vector<double, 3>', 'R': 'Eigen::Matrix<double, 3, 3>'}, [x, R])\n",
+    "    forward_kinematics_printer_cpp.print()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "id": "e6210302",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "if generate_output_file_for_julia:\n",
+    "    forward_kinematics_printer_julia = JuliaFunction('forward_kinematics', src_folder_path_julia, {'q':'SVector{7, Float64}'}, {'x': 'SVector{3, Float64}', 'R': 'SMatrix{3, 3, Float64}'}, [x, R])\n",
+    "    forward_kinematics_printer_julia.print()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "392f2b9c-41be-47be-aa87-fe0c0a738673",
+   "metadata": {},
+   "source": [
+    "Print Jacobian and it derivative $J(q)$, $\\dot{J}(q, \\dot{q})$ "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "id": "e0521eaf-8938-4bf8-bc9f-e69009e4c7ed",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "if generate_output_file_for_python:\n",
+    "    jacobian_printer = PythonFunction('jacobian', src_folder_path_python, ['q'], ['J'], J_subs)\n",
+    "    jacobian_dot_printer = PythonFunction('jacobian_dot', src_folder_path_python, ['q', 'qp'], ['Jdot'], J_dot_subs)\n",
+    "    jacobian_printer.print()\n",
+    "    jacobian_dot_printer.print()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "id": "b9a1932a-0a89-4fd2-a23a-e9115755d007",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Printing the function: jacobian\n",
+      "Printing the function: jacobian_dot\n"
+     ]
+    }
+   ],
+   "source": [
+    "if generate_output_file_for_cpp:\n",
+    "    jacobian_printer_cpp = CppFunction('jacobian', src_folder_path_cpp, {'q':'Eigen::Vector<double, 7>'}, {'J': 'Eigen::Matrix<double, 6, 7>'}, set(), J_subs)\n",
+    "    jacobian_dot_printer_cpp = CppFunction('jacobian_dot', src_folder_path_cpp, {'q':'Eigen::Vector<double, 7>', 'qp':'Eigen::Vector<double, 7>'}, {'Jdot': 'Eigen::Matrix<double, 6, 7>'}, set(), J_dot_subs)\n",
+    "    jacobian_printer_cpp.print()\n",
+    "    jacobian_dot_printer_cpp.print()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "id": "bc8def17",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "if generate_output_file_for_julia:\n",
+    "    jacobian_printer_julia = JuliaFunction('jacobian', src_folder_path_julia, {'q':'SVector{7, Float64}'}, {'J': 'SMatrix{6, 7, Float64}>'}, J_subs)\n",
+    "    jacobian_dot_printer_julia = JuliaFunction('jacobian_dot', src_folder_path_julia, {'q':'SVector{7, Float64}', 'qp':'SVector{7, Float64}'}, {'J_dot': 'SMatrix{6, 7, Float64}>'}, J_dot_subs)\n",
+    "    jacobian_printer_julia.print()\n",
+    "    jacobian_dot_printer_julia.print()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "dd32dd72-4459-410f-8899-c1d21a4844ef",
+   "metadata": {},
+   "source": [
+    "### Dynamics functions"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b690161a-c485-4eae-be6f-dc15fa4d3a77",
+   "metadata": {},
+   "source": [
+    "Print mass matrix $M(q)$"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "id": "ef7cb12a-25bc-4bf9-aa01-d036f7d04bc3",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "if generate_output_file_for_python:\n",
+    "    mass_matrix_printer_py = PythonFunction('mass_matrix', src_folder_path_python, ['q'], ['M'], M)\n",
+    "    mass_matrix_printer_py.print()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "id": "28da07b4-afc6-46fa-b935-aea9353143c4",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Printing the function: mass_matrix\n"
+     ]
+    }
+   ],
+   "source": [
+    "if generate_output_file_for_cpp:\n",
+    "    mass_matrix_printer_cpp = CppFunction('mass_matrix', src_folder_path_cpp, {'q':'Eigen::Vector<double, 7>'}, {'M': 'Eigen::Matrix<double, 7, 7>'}, set(), M)\n",
+    "    mass_matrix_printer_cpp.print()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "id": "2473473b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "if generate_output_file_for_julia:\n",
+    "    mass_matrix_printer_julia = JuliaFunction('mass_matrix', src_folder_path_julia, {'q':'SVector{7, Float64}'}, {'M':'SMatrix{7, 7, Float64}'}, M)\n",
+    "    mass_matrix_printer_julia.print()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a28e7583-fae6-4970-99a0-4b42bd7a8b67",
+   "metadata": {},
+   "source": [
+    "Print gravity term $g(q)$"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
    "id": "f240954b-f93f-4f05-8bdf-07b4b55ed031",
    "metadata": {},
    "outputs": [],
@@ -913,8 +911,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 36,
    "id": "06d79bda",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Printing the function: gravity\n"
+     ]
+    }
+   ],
+   "source": [
+    "if generate_output_file_for_cpp:\n",
+    "    gravity_term_printer_cpp = CppFunction('gravity', src_folder_path_cpp, {'q': 'Eigen::Vector<double, 7>'}, {'G': 'Eigen::Vector<double, 7>'}, set(), G)\n",
+    "    gravity_term_printer_cpp.print()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "id": "67914f21-df56-4bf0-98d5-2befcd557a5b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -924,8 +942,16 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "b893168a-8866-49f0-9882-143d32d5a3fe",
+   "metadata": {},
+   "source": [
+    "Print Coriolis term $C(q, \\dot{q})\\dot{q}$"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 38,
    "id": "f629c96f-7814-423b-ab1d-90840bb14d16",
    "metadata": {},
    "outputs": [],
@@ -937,15 +963,43 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 39,
    "id": "cacb1e7f",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Printing the function: coriolis\n"
+     ]
+    }
+   ],
+   "source": [
+    "if generate_output_file_for_cpp:\n",
+    "    gravity_term_printer_julia = CppFunction('coriolis', src_folder_path_cpp, {'q': 'Eigen::Vector<double, 7>', 'qp': 'Eigen::Vector<double, 7>'}, {'C':'Eigen::Vector<double, 7>'}, set(), C)\n",
+    "    gravity_term_printer_julia.print()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "id": "ce8df1c0-481e-4503-b0f3-471fa02b78c5",
    "metadata": {},
    "outputs": [],
    "source": [
     "if generate_output_file_for_julia:\n",
-    "    gravity_term_printer_julia = JuliaFunction('coriolis', src_folder_path_julia, {'q':'SVector{7, Float64}', 'qp':'SVector{7, Float64}'}, {'C':'SVector{7, Float64}'}, C)\n",
+    "    gravity_term_printer_julia = JuliaFunction('coriolis', src_folder_path_julia, {'q': 'SVector{7, Float64}', 'qp': 'SVector{7, Float64}'}, {'C': 'SVector{7, Float64}'}, C)\n",
     "    gravity_term_printer_julia.print()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0122638d-3e28-45bd-b63d-7f433f0e43d6",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -964,7 +1018,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.2"
+   "version": "3.12.3"
   }
  },
  "nbformat": 4,
