--- a/analysis.ipynb
+++ b/analysis.ipynb
@@ -50,9 +50,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "generate_output_file_for_python = False\n",
+    "generate_output_file_for_python = True\n",
     "generate_output_file_for_cpp = True\n",
-    "generate_output_file_for_julia = False\n",
+    "generate_output_file_for_julia = True\n",
     "\n",
     "Path(os.path.join('.', 'src')).mkdir(exist_ok=True)\n",
     "\n",
@@ -731,7 +731,15 @@
    "execution_count": 26,
    "id": "6edcc76e-c843-4d2b-9413-a137eac81412",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Printing the function: forward_kinematics\n"
+     ]
+    }
+   ],
    "source": [
     "if generate_output_file_for_python:\n",
     "    forward_kinematics_printer = PythonFunction('forward_kinematics', src_folder_path_python, ['q'], ['x', 'R'], [x, R])\n",
@@ -763,7 +771,15 @@
    "execution_count": 28,
    "id": "e6210302",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Printing the function: forward_kinematics\n"
+     ]
+    }
+   ],
    "source": [
     "if generate_output_file_for_julia:\n",
     "    forward_kinematics_printer_julia = JuliaFunction('forward_kinematics', src_folder_path_julia, {'q':'SVector{7, Float64}'}, {'x': 'SVector{3, Float64}', 'R': 'SMatrix{3, 3, Float64}'}, [x, R])\n",
@@ -783,7 +799,16 @@
    "execution_count": 29,
    "id": "e0521eaf-8938-4bf8-bc9f-e69009e4c7ed",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Printing the function: jacobian\n",
+      "Printing the function: jacobian_dot\n"
+     ]
+    }
+   ],
    "source": [
     "if generate_output_file_for_python:\n",
     "    jacobian_printer = PythonFunction('jacobian', src_folder_path_python, ['q'], ['J'], J_subs)\n",
@@ -820,7 +845,16 @@
    "execution_count": 31,
    "id": "bc8def17",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Printing the function: jacobian\n",
+      "Printing the function: jacobian_dot\n"
+     ]
+    }
+   ],
    "source": [
     "if generate_output_file_for_julia:\n",
     "    jacobian_printer_julia = JuliaFunction('jacobian', src_folder_path_julia, {'q':'SVector{7, Float64}'}, {'J': 'SMatrix{6, 7, Float64}>'}, J_subs)\n",
@@ -850,7 +884,15 @@
    "execution_count": 32,
    "id": "ef7cb12a-25bc-4bf9-aa01-d036f7d04bc3",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Printing the function: mass_matrix\n"
+     ]
+    }
+   ],
    "source": [
     "if generate_output_file_for_python:\n",
     "    mass_matrix_printer_py = PythonFunction('mass_matrix', src_folder_path_python, ['q'], ['M'], M)\n",
@@ -882,7 +924,15 @@
    "execution_count": 34,
    "id": "2473473b",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Printing the function: mass_matrix\n"
+     ]
+    }
+   ],
    "source": [
     "if generate_output_file_for_julia:\n",
     "    mass_matrix_printer_julia = JuliaFunction('mass_matrix', src_folder_path_julia, {'q':'SVector{7, Float64}'}, {'M':'SMatrix{7, 7, Float64}'}, M)\n",
@@ -902,7 +952,15 @@
    "execution_count": 35,
    "id": "f240954b-f93f-4f05-8bdf-07b4b55ed031",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Printing the function: gravity\n"
+     ]
+    }
+   ],
    "source": [
     "if generate_output_file_for_python:\n",
     "    gravity_term_printer = PythonFunction('gravity', src_folder_path_python, ['q'], ['G'], G)\n",
@@ -934,7 +992,15 @@
    "execution_count": 37,
    "id": "67914f21-df56-4bf0-98d5-2befcd557a5b",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Printing the function: gravity\n"
+     ]
+    }
+   ],
    "source": [
     "if generate_output_file_for_julia:\n",
     "    gravity_term_printer_julia = JuliaFunction('gravity', src_folder_path_julia, {'q':'SVector{7, Float64}'}, {'G':'SVector{7, Float64}'}, G)\n",
@@ -954,7 +1020,15 @@
    "execution_count": 38,
    "id": "f629c96f-7814-423b-ab1d-90840bb14d16",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Printing the function: coriolis\n"
+     ]
+    }
+   ],
    "source": [
     "if generate_output_file_for_python:\n",
     "    gravity_term_printer = PythonFunction('coriolis', src_folder_path_python, ['q', 'qp'], ['C'], C)\n",
@@ -986,7 +1060,15 @@
    "execution_count": 40,
    "id": "ce8df1c0-481e-4503-b0f3-471fa02b78c5",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Printing the function: coriolis\n"
+     ]
+    }
+   ],
    "source": [
     "if generate_output_file_for_julia:\n",
     "    gravity_term_printer_julia = JuliaFunction('coriolis', src_folder_path_julia, {'q': 'SVector{7, Float64}', 'qp': 'SVector{7, Float64}'}, {'C': 'SVector{7, Float64}'}, C)\n",
